--- a/src/index.html
+++ b/src/index.html
@@ -17,5 +17,28 @@
         <button id="submitButton" type="submit">Get Weather</button>
     </form>
     <div class="error" id="errorMessage"></div>
+    <div id="weatherContainer" style="display: none;">
+        <div id="cityName"></div>
+        <div id="currentWeather">
+          <div id="temperature"></div>
+          <div id="conditions"></div>
+          <div id="windSpeed"></div>
+          <div id="precipitation"></div>
+        </div>
+      
+        <div id="forecast">
+          <h3>5-Day Forecast</h3>
+          <div id="forecastItems">
+            <!-- Template for forecast items -->
+            <div class="forecast-item template" style="display: none;">
+              <h4 class="forecast-date"></h4>
+              <p class="forecast-max-temp"></p>
+              <p class="forecast-min-temp"></p>
+              <p class="forecast-conditions"></p>
+            </div>
+          </div>
+        </div>
+      </div>
+      
 </body>
 </html>
